instructions.Instructions.scala.error
Erreur de compilation :
Instructions:4: error: not found: value haut
haut()
^Instructions:5: error: not found: value haut
haut()
^Instructions:8: error: not found: value bas
bas()
^Instructions:10: error: not found: value droit
droit() 
^