instructions.Instructions.scala.code
baisseBrosse()
droite()
droite()
haut()
haut()
gauche()
gauche()
bas()
leveBrosse()
droit()